--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -13,16 +13,16 @@ $palette: (
 		3: #33363A
 	),
 	primary: (
-		1: #6163FF,
-		2: #ACADFF,
-		3: #5658DD,
-		4: #E9E9FF
+		1: #7FB685,
+		2: #1E4844,
+		3: #59948E,
+		4: #D2F9EE
  	),
 	secondary: (
-		1: #24E5AF,
-		2: #73EFCC,
-		3: #1CB68B,
-		4: #D2F9EE
+		1: #7FB685,
+		2: #7FB685,
+		3: #7FB685,
+		4: #7FB685
 	),
 	alert: (
 		error: #FF6171,
