update guides page css to make it more obvious you can click on each topic

--- a/src/assets/scss/core/sections/_features-tiles.scss
+++ b/src/assets/scss/core/sections/_features-tiles.scss
@@ -50,6 +50,7 @@
 		padding-bottom: $features-tiles-item--inner-padding-v;
 		padding-left: $features-tiles-item--inner-padding-h;
 		padding-right: $features-tiles-item--inner-padding-h;
+		background-color: $features-tiles-item--background-color;
 	}
 }
 
