add basic progress bar that is finally compatible on all browsers

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -63,6 +63,11 @@
 @import "core/elements/modal";
 
 /*--------------------------------------------------------------
+# Progress Bar
+--------------------------------------------------------------*/
+@import "core/elements/progress-bar";
+
+/*--------------------------------------------------------------
 # Split pattern
 --------------------------------------------------------------*/
 @import "core/patterns/split";
