--- a/src/assets/scss/core/elements/_forms.scss
+++ b/src/assets/scss/core/elements/_forms.scss
@@ -5,6 +5,14 @@ fieldset {
     border: 0;
 }
 
+.flex-container {
+	margin-top: 64px;
+	margin-left: 64px;
+}
+.flex-item {
+	padding: 16px;
+}
+
 .form-label,
 .form-switch,
 .form-slider {
@@ -160,7 +168,7 @@ textarea.form-input {
 .form-checkbox,
 .form-radio,
 .form-switch {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .form-checkbox,
@@ -174,6 +182,12 @@ textarea.form-input {
 .form-checkbox,
 .form-radio {
 	color: color(check-radio);
+	font-size:22px;
+
+	label {
+		margin-top: 20px;
+		padding-left: 12px;
+	}
 }
 
 .form-checkbox,
@@ -488,6 +502,17 @@ textarea.form-input {
 }
 
 @include media( '<=medium' ) {
+
+	.flex-container {
+		margin-top: 64px;
+		margin-left: 0px;
+		text-align: left;
+	
+	}
+
+	.form-checkbox {
+		font-size: 18px;
+	}
 
 	.form-group-desktop {
 
