--- a/src/assets/scss/core/elements/_progress-bar.scss
+++ b/src/assets/scss/core/elements/_progress-bar.scss
@@ -35,7 +35,7 @@
 // https://stackoverflow.com/questions/29205562/how-to-make-corners-of-progress-bar-round-in-css
 .progress-bar {
 	width: 100%;
-	text-align: center;
+	// text-align: center;
 	margin: 0 auto;
 
 	progress {
@@ -56,7 +56,7 @@
 	progress::-webkit-progress-bar {
 // 		height:40px;
 		width:80%;
-		margin:0 auto;
+		margin: 0 auto;
 		background-color:#dadada;
 // 		border-radius:100px;
 	}
@@ -86,6 +86,7 @@
 // 		content: attr(value) '%';
 		color:rgb(224, 214, 214);
 	}
+	// https://developer.mozilla.org/en-US/docs/Web/CSS/::-moz-progress-bar
 	progress::-moz-progress-bar {
 		// display:inline-block;
 		// float:left;
